--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "latest",
